src/objects/SomTv_B2BAktionsmitgliederHistory__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_ZuletztGeaendertUm__c</fullName>
        <description>Zeigt Datum und Uhrzeit an, da dies nicht mit dem Standardfeld im Bericht möglich ist</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt Datum und Uhrzeit an, da dies nicht mit dem Standardfeld im Bericht möglich ist</inlineHelpText>
        <label>Zuletzt geändert um</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SomTv_B2BAktinsmitglied__c</fullName>
        <label>B2B Aktionsmitglied</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>B2B Aktionsmitglieder Histories</relationshipLabel>
        <relationshipName>B2B_Aktionsmitglieder_Histories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomTv_Kampagne__c</fullName>
        <label>Kampagne</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>B2B Aktionsmitglieder Histories</relationshipLabel>
        <relationshipName>B2B_Aktionsmitglieder_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomTv_MitgliedID__c</fullName>
        <externalId>true</externalId>
        <label>Mitglied ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_StatusAlt__c</fullName>
        <label>Status alt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_StatusNeu__c</fullName>
        <label>Status neu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ReliabilityIndex__c</fullName>
        <description>CRMSALES-355 Zuverlässigkeit des Kontakts bei Rückmeldung zu diesem Event</description>
        <formula>IF( SomTv_StatusAlt__c = &quot;Zusage&quot;  &amp;&amp; (SomTv_StatusNeu__c = &quot;Teilnehmer&quot;  || 
       SomTv_StatusNeu__c = &quot;Danke verschickt&quot;), 5 , 
      IF(SomTv_StatusAlt__c = &quot;Absage&quot;  &amp;&amp;  (SomTv_StatusNeu__c = &quot;Nicht-Teilnehmer&quot;), 3,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zuverlässigkeit des Kontakts bei Rückmeldung zu diesem Event.</inlineHelpText>
        <label>Zuverlässigkeitsindex</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>B2B Aktionsmitglieder History</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>B2B-History-{0}</displayFormat>
        <label>B2B Aktionsmitglieder History-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Aktionsmitglieder Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>